objects/vlocity_cmt__FulfilmentRequestLineDecompRelationship__c.object
<CustomObject>
    <description>Links source Order/Fulfilment Request Line and a Fulfilment Request Line that is a result of this decomposition</description>
    <fields>
        <fullName>vlocity_cmt__DestinationFulfilmentRequestLineId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DestinationFulfilmentRequestLineId</description>
        <inlineHelpText>DestinationFulfilmentRequestLineId</inlineHelpText>
        <label>Destination Fulfilment Request Line</label>
        <referenceTo>vlocity_cmt__FulfilmentRequestLine__c</referenceTo>
        <relationshipLabel>Source Decomposition Relationships</relationshipLabel>
        <relationshipName>SourceDecompositionRelationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsConditionFailed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Condition failed prevents Attributes propagation, but still allows tracing a Destination FRL created following decomposition rules (ex. Scope, Soft Cancel...)</description>
        <label>Is Condition Failed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SourceFulfilmentRequestLineId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SourceFulfilmentRequestLineId</description>
        <inlineHelpText>SourceFulfilmentRequestLineId</inlineHelpText>
        <label>Source Fulfilment Request Line</label>
        <referenceTo>vlocity_cmt__FulfilmentRequestLine__c</referenceTo>
        <relationshipLabel>Destination Decomposition Relationships</relationshipLabel>
        <relationshipName>DestinationDecompositionRelationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SourceOrderItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SourceOrderItemId</description>
        <inlineHelpText>SourceOrderItemId</inlineHelpText>
        <label>Source Order Item</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Destination Decomposition Relationships</relationshipLabel>
        <relationshipName>DestinationDecompositionRelationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>FulfilmentRequestLineDecompRelationship</label>
    <nameField>
        <label>Fulfilment Request Item Decomp Re Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FulfilmentRequestLineDecompRelationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>